--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.4.19",
     "lucide-react": "^0.268.0",
     "next": "13.4.19",
+    "next-intl": "^3.0.0-beta.10",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
